--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,6 +3,8 @@
     "signUp": "Sign Up",
     "signIn": "Sign In",
     "login": "Login",
+    "event": "Event",
+    "events": "Events",
     "home": "Home",
     "profile": "Profile",
     "about": "About",
@@ -27,6 +29,7 @@
     "close": "Close",
     "search": "Search",
     "expenses": "Expenses",
+    "units": "Units",
     "expense": "Expense",
     "expenseId": "Expense ID",
     "expenseDate": "Expense Date",
