--- a/i18n/nb.json
+++ b/i18n/nb.json
@@ -3,6 +3,8 @@
     "signUp": "Registrer deg",
     "signIn": "Logg inn",
     "login": "Logg inn",
+    "event": "Arrangement",
+    "events": "Arrangementer",
     "home": "Hjem",
     "profile": "Profil",
     "about": "Om",
@@ -27,6 +29,7 @@
     "close": "Lukk",
     "search": "Søk",
     "expenses": "Utgifter",
+    "units": "Enheter",
     "expense": "Utgift",
     "expenseId": "Utgifts-ID",
     "expenseDate": "Utgiftsdato",
