--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,6 +3,8 @@
     "signUp": "Sign Up",
     "signIn": "Sign In",
     "login": "Login",
+    "seats_available": "Available Seats",
+    "coming_soon": "Coming Soon",
     "event": "Event",
     "events": "Events",
     "home": "Home",
