--- a/i18n/nb.json
+++ b/i18n/nb.json
@@ -3,6 +3,8 @@
     "signUp": "Registrer deg",
     "signIn": "Logg inn",
     "login": "Logg inn",
+    "seats_available": "Ledige plasser",
+    "coming_soon": "Kommer snart!",
     "event": "Arrangement",
     "events": "Arrangementer",
     "home": "Hjem",
