--- a/i18n/en.json
+++ b/i18n/en.json
@@ -38,6 +38,11 @@
     "services": "Services",
     "settings": "Settings",
     "welcome_message": "Welcome to the BISO app!",
-    "more_services": "More Services are coming soon!"
+    "more_services": "More Services are coming soon!",
+    "address_details": "Address Details",
+    "contact_details": "Contact Details",
+    "payment_details": "Payment Details",
+    "login_biso": "Login to BISO",
+    "favorite_units": "Favorite Units"
   }
   
