Config fix, UI updates
To same some time, I've decided to migration to an existing UI Library with a design system in place. I've decided to go with UI kitten as it is easily extensible, themeable and configurable.

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,6 +43,10 @@
     "contact_details": "Contact Details",
     "payment_details": "Payment Details",
     "login_biso": "Login to BISO",
-    "favorite_units": "Favorite Units"
+    "favorite_units": "Favorite Units",
+    "emailRequired": "Email is required",
+    "emailInvalid": "Email is invalid",
+    "passwordRequired": "Password is required",
+    "passwordsDontmatch": "Passwords don't match"
   }
   
